<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.intimealarm.findme.Fragments.LoginFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <TextView
        android:text="@string/placeholder"
        android:layout_width="match_parent"
        android:gravity="center_horizontal"
        android:textSize="24sp"
        android:textStyle="bold"
        android:padding="20dp"
        android:layout_height="wrap_content"
        android:id="@+id/auth_title" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:layout_below="@id/auth_title"
        android:layout_centerHorizontal="true"
        android:id="@+id/frag_login_et_email"
        android:hint="@string/hint_email"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:layout_below="@+id/frag_login_et_email"
        android:layout_alignEnd="@+id/frag_login_et_email"
        android:id="@+id/frag_login_et_password"
        android:hint="@string/hint_password"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:layout_below="@+id/frag_login_et_password"
        android:layout_alignEnd="@+id/frag_login_et_email"
        android:id="@+id/frag_login_et_password_confirm"
        android:hint="@string/hint_password_confirm"/>

    <Button
        android:text="@string/btn_sign_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:id="@+id/frag_auth_btn"
        android:layout_above="@+id/frag_alt_btn"
        style="@style/Widget.AppCompat.Button.Colored"/>

    <Button
        android:layout_marginBottom="100dp"
        android:text="@string/frag_alt_signin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:id="@id/frag_alt_btn"
        style="@style/Widget.AppCompat.Button.Borderless.Colored" />



</RelativeLayout>
