<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.intimealarm.findme.SettingsActivity"
    android:orientation="vertical"
    android:weightSum="1">

    <TextView
    android:text="@string/placeholder_location_interval"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
        android:textColor="@color/settings_text"/>

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/location_interval_spinner"
        android:paddingTop="10dp"
        android:paddingBottom="20dp"
        />

    <View
        android:layout_marginBottom="20dp"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/divider"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/enable_sms_location_retrieval"
            android:textColor="@color/settings_text"
            android:layout_weight="1"/>

        <ToggleButton
            android:id="@+id/enableSMSToggle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <View
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/divider"/>

    <TextView
        android:text="@string/placeholder_location_keyword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/location_keyword_lbl"
        android:textColor="@color/settings_text"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:text="@string/keyword_not_set"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/location_keyword"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:padding="5dp"
            android:layout_weight="1"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_change_keyword"
            style="@style/Widget.AppCompat.Button.Colored"
            android:id="@+id/btn_change_keyword"/>
    </LinearLayout>



</LinearLayout>
